--- a/PSM/index.html
+++ b/PSM/index.html
@@ -2,115 +2,184 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>COVID19 KFUPM</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
-    <link rel="stylesheet" href="assets/css/untitled-1.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <title>COVID-19 KFUPM</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-md sticky-top navigation-clean" style="background-color: rgb(191,209,229);">
-        <div class="container-fluid"><a class="navbar-brand text-truncate" href="#" style="font-size: 30px;color: rgb(33,37,41);">Pandemic Surveillance System<br></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"></button>
-            <div class="collapse navbar-collapse"
-                id="navcol-1">
-                <ul class="nav navbar-nav" style="font-size: 20px;">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#about" style="color: rgb(0,0,0);padding: 16px;">About</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#Dashboard" style="color: rgb(0,0,0);padding: 16px;">Dashboard</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#team" style="color: rgb(33,37,41);padding: 16px;">Team</a></li>
+    <!-- Navbar -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light"
+        style="background-color: rgba(191, 209, 229, 1.0) !important;">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand mb-0 h1" href="#">Pandemic Surveillance System</a>
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#team">Team</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header id="about" style="margin-top: 20px;">
-        <div class="col-auto text-center">
-            <div class="row text-center justify-content-center align-items-start" style="margin-top: 9px;">
-                <div class="col-md-2 col-lg-2"><img src="assets/img/1200px-King_Fahd_University_of_Petroleum_&_Minerals_Logo.svg.png" style="width: 100px;height: 100px;"></div>
-                <div class="col-md-3 col-lg-2"><img src="assets/img/purdue-1-1.png" style="width: 150px;height: 100px;"></div>
-                <div class="col-md-5 col-lg-4"><img src="assets/img/Imam_Abdulrahman_Bin_Faisal_University_Logo.svg" style="width: 200px;height: 100px;"></div>
-                <div class="col-md-2 col-lg-2 offset-lg-0"><img src="assets/img/logo%20(1).png" style="width: 150px;height: 100px;"></div>
+
+    <header id="about" class="my-4">
+        <div class="container">
+            <div class="row text-center justify-content-around mt-5">
+                <div class="col-md-2 col-lg-2 py-2">
+                    <img src="assets/img/1200px-King_Fahd_University_of_Petroleum_&_Minerals_Logo.svg.png"
+                        style="width: 100px; height: 100px" />
+                </div>
+                <div class="col-md-3 col-lg-2 py-2">
+                    <img src="assets/img/purdue-1-1.png" style="width: 150px; height: 100px" />
+                </div>
+                <div class="col-md-5 col-lg-4 py-2">
+                    <img src="assets/img/Imam_Abdulrahman_Bin_Faisal_University_Logo.svg"
+                        style="width: 200px; height: 100px" />
+                </div>
+                <div class="col-md-2 col-lg-2 py-2">
+                    <img src="assets/img/logo%20(1).png" style="width: 150px; height: 100px" />
+                </div>
             </div>
         </div>
-        <div class="container" style="padding-top: 20px;">
-            <h1 style="padding-top: 10px;">About</h1>
-            <div class="col-auto text-center" style="margin-top: 20px;">
+        <div class="container px-5" style="padding-top: 20px">
+            <h1 style="padding-top: 10px" class="text-center">About</h1>
+            <div class="col-auto text-center" style="margin-top: 20px">
                 <div class="row text-center justify-content-center align-items-start">
-                    <div class="col-xl-10 offset-xl-0">
-                        <h1 class="text-justify mb-5" style="font-size: 22px;margin-top: 10px;color: #212529;margin-right: 10px;margin-left: -10px;">Pandemic surveillance aims at monitoring and detection of infectious diseases outbreak by collecting and analyzing health data related to infected people. It will be integrated to a contact tracing app that provide a scalable solution
-                            to monitor and notify exposed people in timely manner. The propose contact tracing app will be developed with strict security and privacy requirements to ensure that data of individual patients is not exposed.<br><br></h1>
+                    <div>
+                        <p class="text-justify mb-5" style="
+                  font-size: 22px;
+                  font-weight: normal;
+                  color: #212529;
+                ">
+                            Pandemic surveillance aims at monitoring and detection of
+                            infectious diseases outbreak by collecting and analyzing health
+                            data related to infected people. It will be integrated to a
+                            contact tracing app that provide a scalable solution to monitor
+                            and notify exposed people in timely manner. The propose contact
+                            tracing app will be developed with strict security and privacy
+                            requirements to ensure that data of individual patients is not
+                            exposed.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <header id="Dashboard" style="margin-top: 20px;">
+    <!-- <header id="Dashboard" style="margin-top: 20px">
         <div class="container">
-            <h1 style="padding-bottom: 10px;">Charts</h1>
-            <div><canvas data-bs-chart="{&quot;type&quot;:&quot;bar&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;January&quot;,&quot;February&quot;,&quot;March&quot;,&quot;April&quot;,&quot;May&quot;,&quot;June&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Revenue&quot;,&quot;backgroundColor&quot;:&quot;#4e73df&quot;,&quot;borderColor&quot;:&quot;#4e73df&quot;,&quot;data&quot;:[&quot;4500&quot;,&quot;5300&quot;,&quot;6250&quot;,&quot;7800&quot;,&quot;9800&quot;,&quot;15000&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false},&quot;title&quot;:{}}}"></canvas></div>
+            <h1 style="padding-bottom: 10px">Charts</h1>
+            <div>
+                <canvas
+                    data-bs-chart='{"type":"bar","data":{"labels":["January","February","March","April","May","June"],"datasets":[{"label":"Revenue","backgroundColor":"#4e73df","borderColor":"#4e73df","data":["4500","5300","6250","7800","9800","15000"]}]},"options":{"maintainAspectRatio":true,"legend":{"display":false},"title":{}}}'></canvas>
+            </div>
         </div>
-    </header>
-    <section id="team" class="testimonials text-center bg-light" style="padding-bottom: 10px;padding-top: 10px;margin-top: 20px;">
-        <div class="container">
-            <h2 class="mb-5">Our Team</h2>
+    </header> -->
+    <section id="team" class="testimonials text-center bg-light"
+        style="padding-bottom: 10px; padding-top: 10px; margin-top: 20px">
+        <h1 class="my-5">Our Team</h1>
+
+        <div class="container justify-content-center">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/Muhamad%20Felemban.jpg" style="width: 160px;height: 200px;">
-                        <h5>Muhamed Felemban</h5>
-                        <p class="font-weight-light mb-0">ddd</p>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Muhamad%20Felemban.jpg" style="margin-top: -10px;" />
                     </div>
+                    <h5>Muhamed Felemban</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
                 </div>
-                <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/Tajamul.png" style="height: 200px;width: 160px;">
-                        <h5>Tajammal Mustafa&nbsp;<br></h5>
-                        <p class="font-weight-light mb-0">ddd<br></p>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Tajamul.png" />
                     </div>
+                    <h5>Tajammal Mustafa</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
                 </div>
-                <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/Ibrahim-ALhussien-576x863.jpg" style="height: 200px;width: 160px;">
-                        <h5>Ibrahim Alhussain</h5>
-                        <p class="font-weight-light mb-0">ddd<br></p>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Ibrahim-ALhussien-576x863.jpg" />
                     </div>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 20px;">
-                <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/Asaad%20AlGhamdi2.jpg" style="height: 200px;width: 160px;">
-                        <h5>Asaad Alghamdi</h5>
-                        <p class="font-weight-light mb-0">ddd<br></p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/ahmad_almulhem.jpg" style="width: 160px;height: 200px;">
-                        <h5>Ahmad Almulhem<br></h5>
-                        <p class="font-weight-light mb-0">ddd<br></p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/Arif%20Ghafoor.jpg" style="width: 160px;height: 200px;">
-                        <h5>Arif Ghafoor</h5>
-                        <p class="font-weight-light mb-0">ddd<br></p>
-                    </div>
+                    <h5>Ibrahim Alhussain</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
                 </div>
             </div>
-            <div class="row" style="margin-top: 20px;">
-                <div class="col-lg-4 offset-lg-4 offset-xl-4">
-                    <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3" src="assets/img/download%20(1).png" style="width: 160px;height: 200px;">
-                        <h5>Abdullah Alnasser</h5>
-                        <p class="font-weight-light mb-0">ddd</p>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Asaad%20AlGhamdi2.jpg" />
                     </div>
+                    <h5>Asaad Alghamdi</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/ahmad_almulhem.jpg" style="margin-top: -15px" />
+                    </div>
+                    <h5>Ahmad Almulhem</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Arif%20Ghafoor.jpg" style="margin-top: -15px" />
+                    </div>
+                    <h5>Arif Ghafoor</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/download%20(1).png" style="margin-top: -8px" />
+                    </div>
+                    <h5>Abdullah Alnasser</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Tajamul.png" />
+                    </div>
+                    <h5>Ajmal Ali</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Tajamul.png" />
+                    </div>
+                    <h5>Othman Kisha</h5>
+                    <p class="font-weight-light mb-0">ddd</p>
                 </div>
             </div>
         </div>
+
     </section>
-    <footer class="border rounded-0 border-dark footer bg-light" style="padding-top: 10px;padding-bottom: 1px;">
-        <p class="text-center"><strong>© KFUPM&nbsp;2020. All Rights Reserved.</strong><br></p>
+
+    <footer class="border-top">
+        <p class="text-center my-auto p-3">
+            <strong>© KFUPM&nbsp;2020. All Rights Reserved.</strong>
+        </p>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/chart.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
+    <script>
+        $("li.nav-item").on("click", function () {
+            $("li.nav-item.active").removeClass("active");
+            $(this).addClass("active");
+        });
+    </script>
 </body>
 
 </html>
