--- a/PSM/index.html
+++ b/PSM/index.html
@@ -30,6 +30,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#team">Team</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://kfupm-covid19.herokuapp.com/" target="_blank">Dashboard</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
