--- a/PSM/index.html
+++ b/PSM/index.html
@@ -28,6 +28,9 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#simulation">Simulation</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#team">Team</a>
                     </li>
                     <li class="nav-item">
@@ -82,6 +85,21 @@
             </div>
         </div>
     </header>
+    <section id="simulation" class="testimonials text-center bg-light"
+    style="padding-bottom: 10px; padding-top: 10px; margin-top: 20px">
+    <h1 class="my-5">Simulation </h1>
+
+<video width="640" height="480" controls>
+    <source src="accelerated.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <p>
+      A simple simulation scenario of students activities within KFUPM campus 
+  </p>
+
+    </section>
+
+
     <!-- <header id="Dashboard" style="margin-top: 20px">
         <div class="container">
             <h1 style="padding-bottom: 10px">Charts</h1>
@@ -101,45 +119,56 @@
                     <div class="team-img shadow mb-3">
                         <img src="assets/img/Muhamad%20Felemban.jpg" style="margin-top: -10px;" />
                     </div>
-                    <h5>Muhamed Felemban</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-5">
-                    <div class="team-img shadow mb-3">
-                        <img src="assets/img/Tajamul.png" />
-                    </div>
-                    <h5>Tajammal Mustafa</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-5">
-                    <div class="team-img shadow mb-3">
-                        <img src="assets/img/Ibrahim-ALhussien-576x863.jpg" />
-                    </div>
-                    <h5>Ibrahim Alhussain</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-5">
-                    <div class="team-img shadow mb-3">
-                        <img src="assets/img/Asaad%20AlGhamdi2.jpg" />
-                    </div>
-                    <h5>Asaad Alghamdi</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
+                    <h4>Muhamed Felemban</h4>
+                    <h5>Computer Engineering, KFUPM</h5>
+                    <p class="font-weight-light mb-0">PI</p>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="team-img shadow mb-3">
                         <img src="assets/img/ahmad_almulhem.jpg" style="margin-top: -15px" />
                     </div>
-                    <h5>Ahmad Almulhem</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
+                    <h4>Ahmad Almulhem</h4>
+                    <h5>Computer Engineering, KFUPM</h5>
+                    <p class="font-weight-light mb-0">Co-I</p>
                 </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Tajamul.png" />
+                    </div>
+                    <h4>Tajammal Mustafa</h4>
+                    <h5>Medical School, IAU</h5>
+                    <p class="font-weight-light mb-0">CO-I</p>
+                </div>
+
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="team-img shadow mb-3">
                         <img src="assets/img/Arif%20Ghafoor.jpg" style="margin-top: -15px" />
                     </div>
-                    <h5>Arif Ghafoor</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
+                    <h4>Arif Ghafoor</h4>
+                    <h5>
+                        Electrical and Computer Engineering, Purdue University
+                    </h5>
+                    <p class="font-weight-light mb-0">Consultant</p>
+                </div>
+
+                
+                
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Tajamul.png" />
+                    </div>
+                    <h4>Alhussain Ibrahim</h4>
+                    <p class="font-weight-light mb-0">Graduate Student</p>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/Tajamul.png" />
+                    </div>
+                    <h4>Asim Gaafar</h4>
+                    <p class="font-weight-light mb-0">Graduate Student</p>
                 </div>
             </div>
             <div class="row">
@@ -148,21 +177,21 @@
                         <img src="assets/img/download%20(1).png" style="margin-top: -8px" />
                     </div>
                     <h5>Abdullah Alnasser</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
+                    <p class="font-weight-light mb-0">Undergraduate Student</p>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="team-img shadow mb-3">
                         <img src="assets/img/Tajamul.png" />
                     </div>
                     <h5>Ajmal Ali</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
+                    <p class="font-weight-light mb-0">Undergraduate Student</p>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="team-img shadow mb-3">
                         <img src="assets/img/Tajamul.png" />
                     </div>
                     <h5>Othman Kisha</h5>
-                    <p class="font-weight-light mb-0">ddd</p>
+                    <p class="font-weight-light mb-0">Undergraduate Student</p>
                 </div>
             </div>
         </div>
