--- a/PSM/index.html
+++ b/PSM/index.html
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="team-img shadow mb-3">
-                        <img src="assets/img/Muhamad%20Felemban.jpg" style="margin-top: -10px;" />
+                        <a href="https://faculty.kfupm.edu.sa/COE/mfelemban/"><img src="assets/img/Muhamad%20Felemban.jpg" style="margin-top: -10px;" /></a>
                     </div>
                     <h4>Muhamed Felemban</h4>
                     <h5>Computer Engineering, KFUPM</h5>
