--- a/PSM/index.html
+++ b/PSM/index.html
@@ -194,6 +194,15 @@
                     <p class="font-weight-light mb-0">Undergraduate Student</p>
                 </div>
             </div>
+             <div class="row">
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="team-img shadow mb-3">
+                        <img src="assets/img/download%20(1).png" style="margin-top: -8px" />
+                    </div>
+                    <h5>Tala Al-Mulla</h5>
+                    <p class="font-weight-light mb-0">KFUPM High School (Mawhiba Ibdaa 2020)</p>
+                </div>
+            </div>
         </div>
 
     </section>
