--- a/PSM/index.html
+++ b/PSM/index.html
@@ -197,7 +197,7 @@
              <div class="row">
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="team-img shadow mb-3">
-                        <img src="assets/img/download%20(1).png" style="margin-top: -8px" />
+                        <img src="assets/img/Tajamul.png" style="margin-top: -8px" />
                     </div>
                     <h5>Tala Al-Mulla</h5>
                     <p class="font-weight-light mb-0">KFUPM High School (Mawhiba Ibdaa 2020)</p>
