--- a/PSM/index.html
+++ b/PSM/index.html
@@ -71,14 +71,22 @@
                   font-weight: normal;
                   color: #212529;
                 ">
-                            Pandemic surveillance aims at monitoring and detection of
+                            The objective of pandemic surveillance is to monitor and detect potential
                             infectious diseases outbreak by collecting and analyzing health
-                            data related to infected people. It will be integrated to a
-                            contact tracing app that provide a scalable solution to monitor
-                            and notify exposed people in timely manner. The propose contact
-                            tracing app will be developed with strict security and privacy
-                            requirements to ensure that data of individual patients is not
-                            exposed.
+                            data related to infected people. Typically, data collection focuses on
+                             pre-diagnosis information collected from patients admitted to emergency rooms and urgent care. 
+                        Such information is insufficient for a full understanding of the dynamics of the disease outbreak. 
+                            In such cases, it is important to immediately collect information about potentially infected people
+                            who came in contact with the admitted patient. This process is known as Contact Tracing. 
+                            Manual contact tracing is labor intensive and prone to error. Due to the vast impact of COVID-19 on health and economy worldwide, 
+                            it is important to develop a robust surveillance systems for real-time monitoring of the infected cases. 
+                            To address this challenge, we developed a Real-time Pandemic Surveillance System (RPSS) that will provides timely 
+                            collection, analysis and visualization of infectious pandemic disease data. In addition, RPSS is integrated to contact tracing applications
+                            that provide a scalable solution to monitor and notify exposed people in timely manner. 
+                            The system provides a robust and privacy-preserving platform for modeling and simulating various epidemiology models. 
+                            In addition, it provides an infrastructure for the stakeholders to exercise planning capabilities in various aspects, 
+                            including health response, logistics planning, and long-time strategy planning to confine COVID-19. 
+                            (This project is funded by <a href="https://covid19.kacst.edu.sa/grants/" KACST Fast Track Funding Path for COVID-19 Research Projects>, project number 5-20-01-003-0003. 
                         </p>
                     </div>
                 </div>
