--- a/PSM/index.html
+++ b/PSM/index.html
@@ -86,8 +86,8 @@
                             The system provides a robust and privacy-preserving platform for modeling and simulating various epidemiology models. 
                             In addition, it provides an infrastructure for the stakeholders to exercise planning capabilities in various aspects, 
                             including health response, logistics planning, and long-time strategy planning to confine COVID-19. 
-                            (This project is funded by <a href="https://covid19.kacst.edu.sa/grants/"> KACST Fast Track Funding Path for COVID-19 Research Projects</a>, project number 5-20-01-003-0003. 
                         </p>
+                        <p> (This project is funded by <a href="https://covid19.kacst.edu.sa/grants/"> KACST Fast Track Funding Path for COVID-19 Research Projects</a>, project number 5-20-01-003-0003) </p>
                     </div>
                 </div>
             </div>
