--- a/PSM/index.html
+++ b/PSM/index.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://kfupm-covid19.herokuapp.com/" target="_blank">Dashboard</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="https://kfupm-covid19.herokuapp.com/static/simulation" target="_blank">Simulation</a>
+                    </li>
 
                 </ul>
             </div>
